tests/macro-build-tests/pdcstr-compile-fail.windows.stderr
error: C-style string cannot contain nul characters
 --> $DIR/pdcstr-compile-fail.rs:3:34
  |
3 |     let _ = netcorehost::pdcstr!("\0");
  |                                  ^^^^

error: C-style string cannot contain nul characters
 --> $DIR/pdcstr-compile-fail.rs:4:34
  |
4 |     let _ = netcorehost::pdcstr!("somerandomteststring\0");
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^

error: C-style string cannot contain nul characters
 --> $DIR/pdcstr-compile-fail.rs:5:34
  |
5 |     let _ = netcorehost::pdcstr!("somerandomteststring\0somerandomteststring");
  |                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
